[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "graph2tac"
version = "1.0.4"
authors = [
  { name="Lasse Blaauwbroek" },
  { name="Fidel I. Schaposnik Massolo" },
  { name="Miroslav Olšák" },
  { name="Vasily Pestun" },
  { name="Jason Rute" },
  
]
description = "Train and run models which predict tactics for Coq."
readme = "README.md"
requires-python = ">=3.9,<3.12"  # the python version is determined by the tensorflow version
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
license = {text = "MIT"}
dependencies=[
    "keras>=2.8",
    "tensorflow>=2.12.0,<2.13",
    "tensorflow_gnn>=0.2.0,<0.3",  # TODO(jrute): Try to upgrade to >=0.3
    "protobuf<4.0",
    "tqdm",
    "numpy",
    "pycapnp",
    "psutil",
    "pyyaml",
    "graphviz",
    "pytactician==15.1",
    "pytest",
]

[project.scripts]
g2t-train-tfgnn = "graph2tac.tfgnn.train:main"
g2t-server = "graph2tac.loader.predict_server:main"
g2t-train-hmodel = "graph2tac.loader.hmodel:main"
g2t-tfgnn-predict-graphs = "graph2tac.tfgnn.plot_predict_graphs:main"

[project.urls]
Homepage = "https://github.com/IBM/graph2tac"
Issues = "https://github.com/IBM/graph2tac/issues"
Repository = "https://github.com/IBM/graph2tac"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]
namespaces = false  # prevents folders without __init__.py from being scanned